--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           persist-credentials: false # 避免缓存凭据
+          fetch-depth: 0
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
 
       - name: Install dependencies
         run: npm install
@@ -23,5 +29,8 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+          publish_dir: ./dist
+          destination_dir: .
+          keep_files: false
+          force_orphan: true
           destination_branch: master # 目标分支
